--- a/post02/POST2.Rmd
+++ b/post02/POST2.Rmd
@@ -1,13 +1,57 @@
 ---
 title: "Post2"
-output: html_document
+output: github_document
 ---
 
 #                              Simple&Fast Web Data Tool: Shiny
 
 ### Intro
 Shiny App is a powerful tool to create web app for data engineers & scientists. It makes web visualization and interaction become very easy for data engineers. In the past, I really cannot tell the difference between R and python in their data processing ability. But after experiecing with shiny, I have to say R has a better visualization ability for its customers. I have been a web programmers for quite a long time, and I know how time-consuming it is to make website. If a data scienists has to spend a lot of time on web creation, it's going to lower their data analysis quality. I am a computer science major student and I have been through a lot of difficulities in creating websites before. It's a pain to spend a lot of time to build something that's only served to display some other contents. Therefore, in this Post, I'll make a comparsion between normal web development process and R web process and demonstrate some of Shiny's advantages.
+
+First, let's understand why web visualization is important first. In fact, one of the advantage we have in Shiny App is that it gives us a better visualization than just a R plotted histogram. Consider the ugly histogram below:
     
+```{r}
+library(readr)
+# vector of data types (for each column)
+col_types <- c(
+    'character', 'character', 'factor', 'character', 'double','integer', 'integer', 'integer', 'integer','integer', 'integer','integer', 'integer','integer', 'integer','integer', 'integer','integer', 'integer','integer', 'integer','integer', 'integer','integer'
+)
+
+df1 <- read.csv(
+    'nba2017-player-statistics.csv',
+    header = TRUE,
+    colClasses = col_types,
+    sep = ","
+)
+
+df2 <- read_csv(
+  'nba2017-player-statistics.csv',
+   col_types  = list(col_character(), col_character(), col_factor(c("C", "PF", "PG", "SF", "SG")), col_character(), col_double(), col_integer(), col_integer(),col_integer(),col_integer(),col_integer(),col_integer(),col_integer(),col_integer(),col_integer(),col_integer(),col_integer(),col_integer(),col_integer(),col_integer(),col_integer(),col_integer(),col_integer(),col_integer(),col_integer())
+)
+df1 <- data.frame(df1)
+df2 <- data.frame(df2)
+df1$Experience <- chartr("R", "0", df1$Experience)
+df1<-transform(df1, Experience = as.integer(Experience))
+df2$Experience <- chartr("R", "0", df2$Experience)
+df2<-transform(df1, Experience = as.integer(Experience))
+
+df1$Missed_FG <- df1$FGA - df1$FGM
+df1$Missed_FT <- df1$FTA - df1$FTM
+df1$PTS <-df1$Points3*3 + df1$Points2*2 + df1$FTM
+df1$REB <-df1$OREB + df1$DREB
+df1$MPG <- df1$MIN / df1$GP
+df1$EFF <- (df1$PTS + df1$REB + df1$AST + df1$STL + df1$BLK - df1$Missed_FG - df1$Missed_FT - df1$TO) / df1$GP
+summary(df1$EFF)
+
+print (hist(df1$EFF),  main="Histogram of EFF", xlab="EFF")
+```
+
+Clearly, it's ugly. What about an interactive web histogram?
+![Caption for the picture.](img/webHis.png )
+
+Much better right?!
+
+
     
 This is how a data analytics would normally create a interactive website using shiny package in R. This demo is from https://shiny.rstudio.com/.  It has a nice option control as well as date range input fields. Also, the chart is very clear on data's relationship.
 ![Caption for the picture.](img/codes.png )
